# ChangeLog for dev-lang/v8
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.176 2012/05/09 14:25:29 phajdan.jr Exp $

*v8-3.10.8.4 (09 May 2012)

  09 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.10.5.ebuild,
  +v8-3.10.8.4.ebuild:
  Version bump for dev channel release. Remove old.

*v8-3.10.6 (03 May 2012)

  03 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.10.2.1.ebuild,
  +v8-3.10.6.ebuild:
  Version bump for dev channel release. Remove old.

*v8-3.9.24.17 (03 May 2012)

  03 May 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.9.24.17.ebuild,
  -v8-3.9.24.14.ebuild:
  Version bump for beta channel release.

  02 May 2012; Agostino Sarubbo <ago@gentoo.org> v8-3.8.9.19.ebuild:
  Stable for X86, wrt bug #414199

  01 May 2012; Agostino Sarubbo <ago@gentoo.org> v8-3.8.9.19.ebuild:
  Stable for AMD64, wrt bug #414199

*v8-3.8.9.19 (01 May 2012)

  01 May 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.8.9.19.ebuild:
  Version bump for stable channel release.

*v8-3.10.5 (26 Apr 2012)

  26 Apr 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.10.0.5.ebuild,
  +v8-3.10.5.ebuild:
  Version bump for dev channel release. Remove old.

*v8-3.9.24.16 (26 Apr 2012)

  26 Apr 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.9.24.16.ebuild,
  -v8-3.9.24.12.ebuild:
  Version bump for beta channel release.

*v8-3.9.24.14 (19 Apr 2012)

  19 Apr 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.9.24.14.ebuild,
  -v8-3.9.24.7.ebuild:
  Version bump for beta channel release.

*v8-3.10.2.1 (18 Apr 2012)

  18 Apr 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.10.2.1.ebuild:
  Version bump for dev channel release.

  15 Apr 2012; Fabian Groffen <grobian@gentoo.org> v8-3.9.24.12.ebuild:
  Add upstream issue references for Darwin-related seds

*v8-3.9.24.12 (14 Apr 2012)

  14 Apr 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.9.24.12.ebuild,
  -v8-3.9.24.1.ebuild: