@@ -1,27 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST v8-3.10.6.tar.bz2 10061440 RMD160 57e11e8e02576b0232d1c7d4c0d43a1d4edcbf19 SHA1 23c16c7a388c2de4d00003d36d5625fccbee1acf SHA256 90c994c586d0befc24e38ad6201c3a582a0f870123c2d42a3ceafbd26c46289f
 DIST v8-3.10.8.4.tar.bz2 10065249 RMD160 cefead6d78d19e2fb60fcd56f0a51ba080f6d29a SHA1 7e05d4d5ca10f0f2c41bf04fb2712eb788f88885 SHA256 a92d1910a66ebf86fb566d8db1226827d41d4fb87892072651422dbc4f0139a0
-DIST v8-3.8.9.16.tar.bz2 9863957 RMD160 9a9c4133db4b3a1767dfde5fb15960f7c80d6f48 SHA1 a0f66148665b36ec8817c7ce78fa785ae76d63fb SHA256 e653e9f4731a16881742c648a4d5d70d2f4f88919247dd4e08e7bff95e7187b4
-DIST v8-3.8.9.18.tar.bz2 9866059 RMD160 1bf90347b5eeac74aa2d5c2af5e0cfbaec10f869 SHA1 1fd8f9337f3ba0403758289f463206cd96bf20ee SHA256 b4949c1c0af7337bf4de1f2798febed5002e892bbc813f8c4acf459569e8ad99
 DIST v8-3.8.9.19.tar.bz2 9865346 RMD160 8e2a0b1284c6a655761423ee0f72e96e2f8d29f0 SHA1 d6141e5cb7db11b73d808acf0552c5ca4da7707c SHA256 0bc72f303d21d0eb6095dbe6c92591be82cde66447b547d81dd8a5eab5c65326
-DIST v8-3.9.24.16.tar.bz2 9973001 RMD160 36171c937b6b56a3d44935125a258259cb465945 SHA1 caf08a3c1369e5f102eae7bbbeaa51fe7aff7644 SHA256 c650b612fe80e9e4f35224cd94f452521dbc20c60af68104f25867ffbfdfdea8
 DIST v8-3.9.24.17.tar.bz2 9970900 RMD160 6a999796916c081c52a445dac42ecb7df26f084e SHA1 4c7aa02352b7b94fd4087eedb9647fdb76b3bf97 SHA256 e65a4affeb18927bf01551aedbb377a7f70269adcf1e6c41e155f95fdfec887f
+DIST v8-3.9.24.21.tar.bz2 9976966 RMD160 17cc6f24c69ffec464d2a7b6fab8ba051821fa1c SHA1 048800284803bd355215b5446b819810f0003958 SHA256 9eb48fed13f5d230044b5a38d44455d1212aa28da797721fb9ba1bba870c64c8
 EBUILD v8-3.10.6.ebuild 2754 RMD160 2a82fbc4c7fecad4f1352efad6a956b367eff575 SHA1 cafd7816baa9309357968c76fa269c98a4bb5829 SHA256 b9649a6e59a7e71ab1c1bb76739e533063440d698476f9a414626f75ae605056
 EBUILD v8-3.10.8.4.ebuild 2756 RMD160 567c54ec46f71d6ca352ceb25db2bbb44797415c SHA1 f656cc895f07551229e73372ee59db7aea02650c SHA256 c00cf1ffdb3b7d81b421ff9c70311f089c6eff5b5f39b09869fde921425673e5
-EBUILD v8-3.8.9.16.ebuild 3721 RMD160 c1183b3147a2b3044fa549f121191b8198d0e880 SHA1 ee79220c4d7006d4e92a36c5bdc1f46355bdc344 SHA256 007b8bf9736f3e07cfcfbf4c3e8882de3e6e91e92722778ca900fdbb5411b35b
-EBUILD v8-3.8.9.18.ebuild 3723 RMD160 5e0099ff1397f4cca8cde8b60b61ed828dc52230 SHA1 e23ec51db83802453ab7ac7ef9943dc6c672ced2 SHA256 7fd0aeb9ecfb716575275252ad75ed45e80ce820a9ce4975e7549b43690850cb
 EBUILD v8-3.8.9.19.ebuild 3717 RMD160 f0e7429ca7175a7ce25a5e3f9e5b2433a0c6232e SHA1 b91a9397699e3c4505a87c3b0fc2369ca1b97baa SHA256 7d8b116755cbe9ef61a5bd0050c50aeacc381b92914c8159aa062a7cc261f101
-EBUILD v8-3.9.24.16.ebuild 3665 RMD160 fa3fdabfbc72f84406460212fd6a8748f31949c5 SHA1 abe7859528fb15f909da03b2f6abd9530d0041d1 SHA256 43649a2959df4f3c2d0220c3554810e57f5c4c1f747635fbc98827654c848af6
 EBUILD v8-3.9.24.17.ebuild 3665 RMD160 6401d1e28b6c1cab9db45687ef59ff891a749cce SHA1 097cb431ec22ffd83db412692002717c5fdf3de9 SHA256 79ea1beebabf41d066d1cf923057aa3f63a6908bdee157e5d6c604892f9bf140
+EBUILD v8-3.9.24.21.ebuild 3665 RMD160 fe68eb67aa8d8800ccea176f9266c1f7a79b6e79 SHA1 6cf18e1c8423df92546e9b48355f9ea3a105ce5b SHA256 da4a91632655f83a7b58c1826ed6325eedb52079c7f65066bb8249d0d62c3a13
 EBUILD v8-9999.ebuild 2770 RMD160 6a3f73e6077e503bcd4b84a7b12b05618602aff1 SHA1 af6ca2fcdfaa8c172acbc3540751c51479235862 SHA256 23ef0e17a678b36e2ec9f1794da00580caf7e0d46a945301b90d8548e2734317
-MISC ChangeLog 28575 RMD160 9437caee19acbae253f0b01ac0daa66100ae2b22 SHA1 92872c18992e98071b12e56d009d0ff717b3fd02 SHA256 8f77c95f6d5102566de2fe7c056b4c5f4026b67d13db5a85e3fb940f812e1af0
+MISC ChangeLog 28792 RMD160 e54a53a693affe34d51bcee1dc87fe2305b2b087 SHA1 02c22928f67fe63b535644bc39d5ab30118ac33c SHA256 d9f3f8710595a49535a8e80d62b85d1abedcd7e0b3a5df3818a1132c6a89bba3
 MISC metadata.xml 162 RMD160 3485b95578a49782c3188a0f963f90c688287fe1 SHA1 46226eeaf4948209a093253f92010abea501daef SHA256 8a3ecdcf518f45ec4843398f9896c9b4d1c867ff2cf2851cf40b06f756f111e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk+qfmIACgkQuUQtlDBCeQKQiQCcD9LddUdYptQuKZbuoShLmkND
-1JwAn2/PkVoXvE5s/g8H6IpnrSJ7Vqba
-=m9OL
+iF4EAREIAAYFAk+rJuYACgkQC77qH+pIQ6RxzAEAlZsVP4824SXU7/sRELFUMbNV
+Mn1cDYG4EtWvj3pwzBMBAMqgCWhFHIeQa//TyAsqz+btF1YWY3aQ+lPUqJlCy5zQ
+=Utgh
 -----END PGP SIGNATURE-----
