@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.176 2012/05/09 14:25:29 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.177 2012/05/10 02:24:32 floppym Exp $
+
+*v8-3.9.24.21 (10 May 2012)
+
+  10 May 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.9.24.21.ebuild,
+  -v8-3.8.9.16.ebuild, -v8-3.8.9.18.ebuild, -v8-3.9.24.16.ebuild:
+  Version bump for beta channel release. Remove old.
 
 *v8-3.10.8.4 (09 May 2012)
 
